[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/PlayerPose.gd" type="Script" id=1]
[ext_resource path="res://scenes/Sensor.tscn" type="PackedScene" id=2]

[node name="PlayerPose" type="Node2D"]
script = ExtResource( 1 )

[node name="WallLeft" parent="." instance=ExtResource( 2 )]
position = Vector2( -10, 0 )
starting_direction = 2

[node name="WallRight" parent="." instance=ExtResource( 2 )]
position = Vector2( 10, 0 )
starting_direction = 0

[node name="FootLeft" parent="." instance=ExtResource( 2 )]
position = Vector2( -9, 19 )
auto_adjust = true

[node name="FootRight" parent="." instance=ExtResource( 2 )]
position = Vector2( 9, 19 )
auto_adjust = true
